@@ -16,8 +16,13 @@ is(
   'MD5 checksum OK via Digest::MD5'
 );
 
-is(
-  Rex::Commands::MD5::_binary_md5($test_file),
-  '93b885adfe0da089cdf634904fd59f71',
-  'MD5 checksum OK via binary'
-);
+SKIP: {
+  skip 'No MD5 binary seems to be available', 1
+    if !defined Rex::Commands::MD5::_binary_md5($test_file);
+
+  is(
+    Rex::Commands::MD5::_binary_md5($test_file),
+    '93b885adfe0da089cdf634904fd59f71',
+    'MD5 checksum OK via binary'
+  );
+}
